<resources>
    <string name="app_name">Jamaica Observer</string>
    <string name="twitter_api_consumer_key">YOURCONSUMERKEYHERE</string>
    <string name="twitter_api_consumer_secret_key">YOURSECRETKEYHERE</string>
    <string name="google_server_key">YOURSERVERKEYHERE</string>
    <string name="google_android_key">YOURANDROIDKEYHERE</string>
    <string name="admob_banner_id">ca-app-pub-9767220477665810/4111848680</string>
    <string name="admob_interstitial_id">ca-app-pub-9767220477665810/6113808680</string>
    <string name="ad_id"></string>
    <string name="ad_visibility">@string/ad_off</string>
    <string name="ad_on">0</string>
    <string name="ad_off">2</string>
    <string name="rss_push_url">http://feeds.feedburner.com/jamaicaobserver/jKfO</string>
    <string name="about_text"><![CDATA[   
    <b>Version 2.0</b>
    <br><br>Thank you for downloading our app<br><br>
    <i>By SIEAE Ltd&#174;</i>
    ]]></string>
    <string-array name="maps_1">
        <item><![CDATA[   
			<b>Adress:</b>
			<br>40-42 1/2 Beechwood Avenue,<br>Kingston, Jamaica<br><br>
			<i>Email: marketing2@jamaicaobserver.com</i>
        ]]></item>
        <item>Jamaica Observer</item>
        <item>This is where our office is.</item>
        <item>-33.864</item>
        <item>151.206</item>
        <item>13</item>
    </string-array>
    <string name="tweet">tweet</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="profile_image">Profile image</string>
    <string name="message">Message</string>
    <string name="tweet_date">Tweeted at</string>
    <string name="tweet_get_failed">We have not been able to retrieve the tweets!</string>
    <string name="tweet_share_url">"Tweet url: "</string>
    <string name="tweet_share_text_begin">" Seen in the \""</string>
    <string name="tweet_share_text_end">\" app</string>
    <string name="tweet_share_header">\'s tweet</string>
    <string name="item_get_failed">We have not been able to retrieve items!</string>
    <string name="ok">Ok</string>
    <string name="feed_title_value">Feed title</string>
    <string name="feed_link_value">Feed description</string>
    <string name="feed_description_value">Feed link</string>
    <string name="item_share_begin">"\n\nArticle Link: "</string>
    <string name="item_share_middle">" Seen in the \""</string>
    <string name="item_share_end">\" app</string>
    <string name="notification_title">New articles</string>
    <string name="notification_message">New items available!</string>
    <string name="video_get_failed">We have not been able to retrieve videos!</string>
    <string name="video_search_hint">Search this Channel</string>
    <string name="video_navigation_previous">"Previous "</string>
    <string name="video_navigation_next">"Next "</string>
    <string name="video_navigation_end">" results"</string>
    <string name="play_button">Play</string>
    <string name="error_search_playlist">You can not search within a playlist</string>
    <string name="video_share_begin">"I just saw this video: "</string>
    <string name="video_share_middle">" in the \""</string>
    <string name="video_share_end">\" app</string>
    <string name="error_received">Problem loading page</string>
    <string name="no_connection">No connection</string>
    <string name="webview_title">Web</string>
    <string name="alert">Alert</string>
    <string name="web_share_begin">"Look what I saw in the \""</string>
    <string name="web_share_end">"\"app: "</string>
    <string name="item_del_text">You are about to delete all your favorites</string>
    <string name="item_del_confirmation">I know</string>
    <string name="no_favorites">Your can add (more) favorites by opening an item and selecting \"favorite\"</string>
    <string name="favorite_success">The item has been added</string>
    <string name="favorite_duplicate">This item has already been added</string>
    <string name="favorite_menu_delete">Delete</string>
    <string name="settings_general_summary">Username and password information</string>
    <string name="settings_general">General</string>
    <string name="settings_showmenu_summary">Yes/No</string>
    <string name="settings_showmenu">Show side menu on start</string>
    <string name="settings_rssnotify_summary">Get informed when there are new articles</string>
    <string name="settings_rssnotify">Notifications</string>
    <string name="settings_fontsize_summary">Preferred text size for articles and posts.</string>
    <string name="settings_fontsize">Text size</string>
    <string name="settings_other_summary">Other information</string>
    <string name="settings_other">Other</string>
     <string name="settings_aboutus_summary">Information about our application</string>
    <string name="settings_aboutus">About</string>
    <string name="settings_rate_summary">Help other users enjoy this application</string>
    <string name="settings_rate">Rate this app</string>
    <string name="wordpress_search_hint">Search this Blog</string>
    <string name="navigate">Navigate</string>
    <string name="maps_location_title">Waiting for location...</string>
    <string name="maps_location_subtitle">Make sure GPS is on</string>
    <string name="volume_low">Turn your volume up!</string>
	<string name="button_close">Close</string>
	<string name="button_play">PLAY</string>
	<string name="button_stop">STOP</string>
    <string name="image_descr">Image</string>
    <string name="set">Set</string>
    <string name="save">Save</string>
    <string name="tumblr_share_begin">Check out this post I saw in</string>
    <string name="saved">Saved at:</string>
    <string name="share_header">Share</string>
    <string name="about_header">About</string>
    <string name="favorite_button">Favorite</string>
    <string name="open_button">Open</string>
    <string name="textview_date">"Date: "</string>
    <string name="loading">Loading..</string>
    <string name="empty_textview">Error loading data</string>
    <string name="section">Section</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="info">Info</string>
    <string name="refresh">Refresh</string>
    <string name="action_night_mode">Night Mode</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome</string>
    <string name="already_loading">We are already loading some new content!</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="not_back">There is nothing to go back to</string>
    <string name="dialog_connection_title">No connection</string>
    <string name="dialog_connection_description">We can not reach our servers at the moment.\n\nYou can always check you favorites and other items using the menu!</string>
    <string name="dialog_internet_title">No internet</string>
    <string name="dialog_internet_description">You seem to have no internet connection, this app requires internet to get the latest content.\n\nYou can continue to see your favorite/offline items!</string>
    <string name="widget_help_text">Choose a topic to be displayed in your widget.</string>
    <string name="empty_string">Loading</string>
    <string name="button_OK">OK</string>
    <string name="button_start">Start</string>
    <string name="button_start_handheld_ar">Mobile AR</string>
    <string name="button_start_viewer_ar">Viewer AR</string>
    <string name="button_start_handheld_vr">Mobile VR</string>
    <string name="button_start_viewer_vr">Viewer VR</string>
    <string name="activities_list_title_string">Vuforia Samples</string>
    <string name="activities_list_empty">No activities</string>
    <string name="target_quality_error_title">Low Quality Image</string>
    <string name="target_quality_error_desc">The image has very little detail, please try another.</string>
    <string name="content_desc_camera_button">Camera Button</string>
    <string name="overlay_build_target_help">Hold the device parallel to the target</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_TITLE">Network Unavailable</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_TITLE">Unsupported Version</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_TITLE">Clock Sync Error</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_TITLE">Request Timeout</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_TITLE">Poor Camera Image</string>
    <string name="UPDATE_ERROR_UNKNOWN_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_DESC">The cloud recognition service access keys are incorrect or have expired.</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_DESC">The cloud recognition service has been suspended.</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_DESC">Please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_DESC">The service is unavailable, please try again later.</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_DESC">The application is using an unsupported version of Vuforia.</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_DESC">Please update the date and time and try again.</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_DESC">The network request has timed out, please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_DESC">The camera does not have enough detail, please try again later.</string>
    <string name="UPDATE_ERROR_UNKNOWN_DESC">The service is unavaiable, please try again later.</string>
    <string name="INIT_ERROR">Error</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia. Camera not accessible</string>
    <string name="INIT_LICENSE_ERROR_MISMATCH_KEY">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia.</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND_TITLE">Database not found</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND">Please scan an object and load a database</string>
    <string name="menu_back">Home</string>
    <string name="menu_extended_tracking">Extended Tracking</string>
    <string name="menu_character_mode">Character Mode</string>
    <string name="menu_flash">Flash</string>
</resources>