<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto" >
	
	<item android:id="@+id/info"
		app:showAsAction="never"
    	  android:title="@string/info"
	      android:icon="@android:drawable/ic_menu_info_details"/>
	
    <item android:id="@+id/refresh_rss"
		app:showAsAction="never"
    	  android:title="@string/refresh"
	      android:icon="@drawable/ic_action_refresh"/>

	<item
		android:id="@+id/night_mode"
		android:checkable="true"
		app:showAsAction="never"
		android:title="@string/action_night_mode"/>


	<!--<item android:id="@+id/night_mode"
		android:title="@string/action_night_mode"
		android:orderInCategory="100"
		app:showAsAction="never"
		android:checkable="true"
		android:checked="false"
		android:actionLayout="@layout/action_checkbox"
		/>-->
</menu>

