<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="252dp"


        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!--<ImageView
                android:id="@+id/listthumb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />-->

            <!--<android.support.v4.view.ViewPager
                android:id="@+id/pager_details"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_collapseMode="parallax"/>-->

            <FrameLayout
                android:id="@+id/top_frame"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:clickable="false"
                android:descendantFocusability="blocksDescendants"
                android:focusable="false"
                android:focusableInTouchMode="false"
                app:layout_collapseMode="parallax">

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager_details"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:clickable="false"
                    android:descendantFocusability="blocksDescendants"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

                <ImageView
                    android:id="@+id/slide_show"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical|left"
                    android:background="@null"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:src="@drawable/ic_action_slidable"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/viewPagerCountDots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_margin="10dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:orientation="horizontal"/>
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_actionbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <!--<android.support.v7.widget.RecyclerView
        android:id="@+id/scrollableview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                ads:adUnitId="@string/ad_id"
                android:visibility="@string/ad_visibility"
                android:background="@color/btnGray"
                ads:adSize="SMART_BANNER"/>

            <LinearLayout
                android:id="@+id/stickyView"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="1dp"
                >

                <TextView
                    android:id="@+id/detailstitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="bold"
                    android:textSize="32sp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/empty_textview"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#545253"/>

                <!-- date -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_detail_horizontal_margin"
                    android:layout_marginRight="15dp"
                    android:paddingBottom="1dp">

                    <!--<TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/textview_date"
                        android:textColor="#fff"/>-->

                    <TextView
                        android:id="@+id/detailspubdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-thin"
                        android:paddingBottom="1dp"
                        android:gravity="left"
                        android:textColor="@color/black_trans80"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <WebView
                    android:id="@+id/descriptionwebview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="0dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

            </LinearLayout>

            <!-- footer -->
            <LinearLayout
                android:id="@+id/buttom_panel"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <!-- devider before buttons  -->
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />

                <!-- buttons -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <!--<Button
                        android:id="@+id/favoritebutton"
                        style="@style/CardActionButton"
                        android:background="@android:color/transparent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/favorite_button" />-->

                    <Button
                        android:id="@+id/openbutton"
                        style="@style/CardActionButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@android:color/transparent"
                        android:text="@string/open_button"
                        android:alpha="0" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>